// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should customize secret and extensions when running create-db 1`] = `
Object {
  "apiVersion": "batch/v1",
  "kind": "Job",
  "metadata": Object {},
  "spec": Object {
    "backoffLimit": 0,
    "template": Object {
      "spec": Object {
        "containers": Array [
          Object {
            "command": Array [
              "create-db-user",
            ],
            "env": Array [
              Object {
                "name": "NEW_DB_NAME",
                "value": "some-db",
              },
              Object {
                "name": "NEW_USER",
                "value": "some-user",
              },
              Object {
                "name": "NEW_PASSWORD",
                "value": "some-password",
              },
              Object {
                "name": "NEW_DB_EXTENSIONS",
                "value": "some-extension",
              },
            ],
            "envFrom": Array [
              Object {
                "secretRef": Object {
                  "name": "some-secret",
                },
              },
            ],
            "image": "registry.gitlab.factory.social.gouv.fr/socialgouv/docker/azure-db:2.1.0",
            "imagePullPolicy": "IfNotPresent",
            "name": "create-db-user",
            "resources": Object {
              "limits": Object {
                "cpu": "300m",
                "memory": "256Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "64Mi",
              },
            },
          },
        ],
        "restartPolicy": "Never",
      },
    },
    "ttlSecondsAfterFinished": 86400,
  },
}
`;

exports[`should use defaults when running create-db 1`] = `
Object {
  "apiVersion": "batch/v1",
  "kind": "Job",
  "metadata": Object {},
  "spec": Object {
    "backoffLimit": 0,
    "template": Object {
      "spec": Object {
        "containers": Array [
          Object {
            "command": Array [
              "create-db-user",
            ],
            "env": Array [
              Object {
                "name": "NEW_DB_NAME",
                "value": "some-db",
              },
              Object {
                "name": "NEW_USER",
                "value": "some-user",
              },
              Object {
                "name": "NEW_PASSWORD",
                "value": "some-password",
              },
              Object {
                "name": "NEW_DB_EXTENSIONS",
                "value": "hstore pgcrypto citext",
              },
            ],
            "envFrom": Array [
              Object {
                "secretRef": Object {
                  "name": "azure-pg-admin-user",
                },
              },
            ],
            "image": "registry.gitlab.factory.social.gouv.fr/socialgouv/docker/azure-db:2.1.0",
            "imagePullPolicy": "IfNotPresent",
            "name": "create-db-user",
            "resources": Object {
              "limits": Object {
                "cpu": "300m",
                "memory": "256Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "64Mi",
              },
            },
          },
        ],
        "restartPolicy": "Never",
      },
    },
    "ttlSecondsAfterFinished": 86400,
  },
}
`;
